--- a/src/main/resources/templates/meeting-properties-edit.html
+++ b/src/main/resources/templates/meeting-properties-edit.html
@@ -20,43 +20,67 @@
                     <hr>
                     <form action="#" th:action="@{/admin/save}"
                           th:object="${properties}" method="POST">
-                        <div class="form-group">
-                            <label class="form-check-label" for="view">View Per Page</label>
-                            <input class="form-control" id="view"
-                                   th:value="${properties.viewPerPage}" autocomplete='off' tabindex='3' type="text"
-                                   th:field="*{viewPerPage}"
-                                   aria-describedby="viewPerPageDescription">
-                            <small id="viewPerPageDescription" class="form-text text-muted">Amount of meetings that will
-                                be shown in view where pagination inline keyboard present.</small>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-check-label" for="view1">Session</label>
-                            <input class="form-control" id="view1"
-                                   th:value="${properties.session}" autocomplete='off' tabindex='3' type="text"
-                                   th:field="*{session}"
-                                   aria-describedby="sessionDescription">
-                            <small id="sessionDescription" class="form-text text-muted">Session time (minutes) during
-                                SBS meeting creation. After this time the session will be expired</small>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-check-label" for="view1">Hour Advance</label>
-                            <input class="form-control" id="view1"
-                                   th:value="${properties.creation.hourAdvance}" autocomplete='off' tabindex='3'
-                                   th:field="*{creation.hourAdvance}"
-                                   aria-describedby="hourAdvanceDescription">
-                            <small id="hourAdvanceDescription" class="form-text text-muted">Minimum time (hours) that
-                                have to past before starting meeting.</small>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-check-label" for="view1">Upper hour limit today</label>
-                            <input class="form-control" id="view1"
-                                   th:value="${properties.creation.upperHourLimitToday}" autocomplete='off' tabindex='3'
-                                   th:field="*{creation.upperHourLimitToday}"
-                                   aria-describedby="upperHourDescription">
-                            <small id="upperHourDescription" class="form-text text-muted">Minimum time (hours) that
-                                have to past before starting meeting.</small>
 
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view">View Per Page</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view"
+                                       th:value="${properties.viewPerPage}" autocomplete='off' tabindex='3' type="text"
+                                       th:field="*{viewPerPage}"
+                                       aria-describedby="viewPerPageDescription">
+                                <small id="viewPerPageDescription" class="form-text text-muted">Amount of meetings that
+                                    will
+                                    be shown in view where pagination inline keyboard present.</small>
+                            </div>
                         </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view1">Session</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view1"
+                                       th:value="${properties.session}" autocomplete='off' tabindex='3' type="text"
+                                       th:field="*{session}"
+                                       aria-describedby="sessionDescription">
+                                <small id="sessionDescription" class="form-text text-muted">Session time (minutes)
+                                    during
+                                    SBS meeting creation. After this time the session will be expired</small>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view1">Hour Advance</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view1"
+                                       th:value="${properties.creation.hourAdvance}" autocomplete='off' tabindex='3'
+                                       th:field="*{creation.hourAdvance}"
+                                       aria-describedby="hourAdvanceDescription">
+                                <small id="hourAdvanceDescription" class="form-text text-muted">Minimum time (hours)
+                                    that
+                                    have to past before starting meeting.</small>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view1">Upper hour limit today</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view1"
+                                       th:value="${properties.creation.upperHourLimitToday}" autocomplete='off'
+                                       th:field="*{creation.upperHourLimitToday}"
+                                       tabindex='3' type="text" aria-describedby="upperHourDescription">
+                                <small id="upperHourDescription" class="form-text text-muted">Minimum time (hours) that
+                                    have to past before starting meeting.</small>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="custom-control custom-checkbox md-10">
+                            <input type="checkbox" class="custom-control-input" id="customControlInline"
+                                   th:value="${properties.creation.notificationGroup}" autocomplete='off'
+                                   th:field="*{creation.notificationGroup}">
+                            <label class="custom-control-label" aria-describedby="test" for="customControlInline">Group
+                                Notification</label>
+                            <small id="test" class="form-text text-muted">Minimum time (hours) that
+                                have to past before starting meeting.</small>
+                        </div>
+                        <hr>
+
+                        <br>
                         <button type="submit" class="btn btn-info col-2">SAVE</button>
                         <a href="/admin/meeting-properties" class="btn btn-secondary btn-md">Back</a>
                     </form>
