--- a/src/main/resources/templates/meeting-properties.html
+++ b/src/main/resources/templates/meeting-properties.html
@@ -16,42 +16,63 @@
                     <h4>Meeting properties</h4>
                     <hr>
                     <form action="#">
-                        <div class="form-group">
-                            <label class="form-check-label" for="view">View Per Page</label>
-                            <input class="form-control" id="view"
-                                   th:value="${properties.viewPerPage}" autocomplete='off' tabindex='3' type="text"
-                                   aria-describedby="viewPerPageDescription" readonly>
-                            <small id="viewPerPageDescription" class="form-text text-muted">Amount of meetings that will
-                                be shown in view where pagination inline keyboard present.</small>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view">View Per Page</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view"
+                                       th:value="${properties.viewPerPage}" autocomplete='off' tabindex='3' type="text"
+                                       aria-describedby="viewPerPageDescription" readonly>
+                                <small id="viewPerPageDescription" class="form-text text-muted">Amount of meetings that
+                                    will
+                                    be shown in view where pagination inline keyboard present.</small>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label class="form-check-label" for="view1">Session</label>
-                            <input class="form-control" id="view1"
-                                   th:value="${properties.session}" autocomplete='off' tabindex='3' type="text"
-                                   aria-describedby="sessionDescription" readonly>
-                            <small id="sessionDescription" class="form-text text-muted">Session time (minutes) during
-                                SBS meeting creation. After this time the session will be expired</small>
-
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view1">Session</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view1"
+                                       th:value="${properties.session}" autocomplete='off' tabindex='3' type="text"
+                                       aria-describedby="sessionDescription" readonly>
+                                <small id="sessionDescription" class="form-text text-muted">Session time (minutes)
+                                    during
+                                    SBS meeting creation. After this time the session will be expired</small>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <label class="form-check-label" for="view1">Hour Advance</label>
-                            <input class="form-control" id="view1"
-                                   th:value="${properties.creation.hourAdvance}" autocomplete='off' tabindex='3'
-                                   aria-describedby="hourAdvanceDescription" readonly>
-                            <small id="hourAdvanceDescription" class="form-text text-muted">Minimum time (hours) that
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view1">Hour Advance</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view1"
+                                       th:value="${properties.creation.hourAdvance}" autocomplete='off' tabindex='3'
+                                       aria-describedby="hourAdvanceDescription" readonly>
+                                <small id="hourAdvanceDescription" class="form-text text-muted">Minimum time (hours)
+                                    that
+                                    have to past before starting meeting.</small>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" for="view1">Upper hour limit today</label>
+                            <div class="col-sm-8">
+                                <input class="form-control" id="view1"
+                                       th:value="${properties.creation.upperHourLimitToday}" autocomplete='off'
+                                       tabindex='3'
+                                       type="text"
+                                       aria-describedby="upperHourDescription" readonly>
+                                <small id="upperHourDescription" class="form-text text-muted">Minimum time (hours) that
+                                    have to past before starting meeting.</small>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="custom-control custom-checkbox md-10">
+                            <input type="checkbox" class="custom-control-input" id="customControlInline"
+                                   th:field="${properties.creation.notificationGroup}"
+                                   onclick="return false;"/>
+                            <label class="custom-control-label" aria-describedby="test" for="customControlInline">Group
+                                Notification</label>
+                            <small id="test" class="form-text text-muted">Minimum time (hours) that
                                 have to past before starting meeting.</small>
-
                         </div>
-                        <div class="form-group">
-                            <label class="form-check-label" for="view1">Upper hour limit today</label>
-                            <input class="form-control" id="view1"
-                                   th:value="${properties.creation.upperHourLimitToday}" autocomplete='off' tabindex='3'
-                                   type="text"
-                                   aria-describedby="upperHourDescription" readonly>
-                            <small id="upperHourDescription" class="form-text text-muted">Minimum time (hours) that
-                                have to past before starting meeting.</small>
-
-                        </div>
+                        <hr>
+                        <br>
                         <a href="/admin/meeting-properties-edit" class="btn btn-info btn-md">Edit</a>
                     </form>
                 </div>
