--- a/src/main/resources/templates/meeting-properties-edit.html
+++ b/src/main/resources/templates/meeting-properties-edit.html
@@ -18,19 +18,22 @@
 
                     <h4>Meeting properties</h4>
                     <hr>
-                    <form action="#" th:action="@{/admin/save}"
+                    <form id="form" action="#" th:action="@{/admin/save}"
                           th:object="${properties}" method="POST">
 
                         <div class="form-group row">
-                            <label class="col-sm-4 col-form-label" for="view">View Per Page</label>
+                            <label class="col-sm-4 col-form-label" for="test1">View Per Page</label>
                             <div class="col-sm-8">
-                                <input class="form-control" id="view"
-                                       th:value="${properties.viewPerPage}" autocomplete='off' tabindex='3' type="text"
-                                       th:field="*{viewPerPage}"
-                                       aria-describedby="viewPerPageDescription">
-                                <small id="viewPerPageDescription" class="form-text text-muted">Amount of meetings that
-                                    will
-                                    be shown in view where pagination inline keyboard present.</small>
+                                <select id="test1" class="custom-select"
+                                        form="form" th:selected="${properties.viewPerPage}"
+                                        th:field="*{viewPerPage}">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
                             </div>
                         </div>
                         <div class="form-group row">
