Admin panel update

--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -6,5 +6,8 @@
             <a class="p-2 text-dark" href="#">API</a>
             <a class="p-2 text-dark" href="#">Support</a>
         </nav>
+        <form th:action="@{/logout}" method="POST">
+            <button class="btn btn-info btn-md">Logout</button>
+        </form>
     </div>
 </div>
