--- a/src/main/resources/templates/meeting-properties-edit.html
+++ b/src/main/resources/templates/meeting-properties-edit.html
@@ -1,96 +1,88 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head>
-        <meta charset="UTF-8"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-              crossorigin="anonymous">
-        <title>Spring Boot Thymeleaf Application</title>
-
+        <div th:replace="blocks/head :: header"></div>
     </head>
     <body>
 
-        <header th:insert="blocks/header :: header"></header>
+        <div class="container d-flex align-items-stretch">
+            <nav id="sidebar" class="img">
+                <div th:replace="blocks/navigation :: navigation"></div>
+            </nav>
+            <!-- Page Content  -->
+            <div id="content" class="p-4 p-md-5 pt-5">
+                <h4>Meeting properties</h4>
+                <hr>
+                <form id="form" action="#" th:action="@{/admin/save}"
+                      th:object="${properties}" method="POST">
 
-        <div class="container p-5">
-            <div class="row justify-content-md-center">
-                <div class="col col-lg-8">
-
-                    <h4>Meeting properties</h4>
-                    <hr>
-                    <form id="form" action="#" th:action="@{/admin/save}"
-                          th:object="${properties}" method="POST">
-
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label" for="test1">View Per Page</label>
-                            <div class="col-sm-8">
-                                <select id="test1" class="custom-select"
-                                        form="form" th:selected="${properties.viewPerPage}"
-                                        th:field="*{viewPerPage}">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                </select>
-                            </div>
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label" for="test1">View Per Page</label>
+                        <div class="col-sm-8">
+                            <select id="test1" class="custom-select"
+                                    form="form" th:selected="${properties.viewPerPage}"
+                                    th:field="*{viewPerPage}">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                            </select>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label" for="view1">Session</label>
-                            <div class="col-sm-8">
-                                <input class="form-control" id="view1"
-                                       th:value="${properties.session}" autocomplete='off' tabindex='3' type="text"
-                                       th:field="*{session}"
-                                       aria-describedby="sessionDescription">
-                                <small id="sessionDescription" class="form-text text-muted">Session time (minutes)
-                                    during
-                                    SBS meeting creation. After this time the session will be expired</small>
-                            </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label" for="view1">Session</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" id="view1"
+                                   th:value="${properties.session}" autocomplete='off' tabindex='3' type="text"
+                                   th:field="*{session}"
+                                   aria-describedby="sessionDescription">
+                            <small id="sessionDescription" class="form-text text-muted">Session time (minutes)
+                                during
+                                SBS meeting creation. After this time the session will be expired</small>
                         </div>
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label" for="view1">Hour Advance</label>
-                            <div class="col-sm-8">
-                                <input class="form-control" id="view1"
-                                       th:value="${properties.creation.hourAdvance}" autocomplete='off' tabindex='3'
-                                       th:field="*{creation.hourAdvance}"
-                                       aria-describedby="hourAdvanceDescription">
-                                <small id="hourAdvanceDescription" class="form-text text-muted">Minimum time (hours)
-                                    that
-                                    have to past before starting meeting.</small>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label class="col-sm-4 col-form-label" for="view1">Upper hour limit today</label>
-                            <div class="col-sm-8">
-                                <input class="form-control" id="view1"
-                                       th:value="${properties.creation.upperHourLimitToday}" autocomplete='off'
-                                       th:field="*{creation.upperHourLimitToday}"
-                                       tabindex='3' type="text" aria-describedby="upperHourDescription">
-                                <small id="upperHourDescription" class="form-text text-muted">Minimum time (hours) that
-                                    have to past before starting meeting.</small>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="custom-control custom-checkbox md-10">
-                            <input type="checkbox" class="custom-control-input" id="customControlInline"
-                                   th:value="${properties.creation.notificationGroup}" autocomplete='off'
-                                   th:field="*{creation.notificationGroup}">
-                            <label class="custom-control-label" aria-describedby="test" for="customControlInline">Group
-                                Notification</label>
-                            <small id="test" class="form-text text-muted">Minimum time (hours) that
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label" for="view1">Hour Advance</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" id="view1"
+                                   th:value="${properties.creation.hourAdvance}" autocomplete='off' tabindex='3'
+                                   th:field="*{creation.hourAdvance}"
+                                   aria-describedby="hourAdvanceDescription">
+                            <small id="hourAdvanceDescription" class="form-text text-muted">Minimum time (hours)
+                                that
                                 have to past before starting meeting.</small>
                         </div>
-                        <hr>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-4 col-form-label" for="view1">Upper hour limit today</label>
+                        <div class="col-sm-8">
+                            <input class="form-control" id="view1"
+                                   th:value="${properties.creation.upperHourLimitToday}" autocomplete='off'
+                                   th:field="*{creation.upperHourLimitToday}"
+                                   tabindex='3' type="text" aria-describedby="upperHourDescription">
+                            <small id="upperHourDescription" class="form-text text-muted">Minimum time (hours) that
+                                have to past before starting meeting.</small>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="custom-control custom-checkbox md-10">
+                        <input type="checkbox" class="custom-control-input" id="customControlInline"
+                               th:value="${properties.creation.notificationGroup}" autocomplete='off'
+                               th:field="*{creation.notificationGroup}">
+                        <label class="custom-control-label" aria-describedby="test" for="customControlInline">Group
+                            Notification</label>
+                        <small id="test" class="form-text text-muted">Minimum time (hours) that
+                            have to past before starting meeting.</small>
+                    </div>
+                    <hr>
 
-                        <br>
-                        <button type="submit" class="btn btn-info col-2">SAVE</button>
-                        <a href="/admin/meeting-properties" class="btn btn-secondary btn-md">Back</a>
-                    </form>
-
-                </div>
+                    <br>
+                    <button type="submit" class="btn btn-info col-2">SAVE</button>
+                    <a href="/admin/meeting-properties" class="btn btn-secondary btn-md">Back</a>
+                </form>
             </div>
-            <div th:insert="blocks/footer :: footer"></div>
         </div>
 
     </body>
