404 error handler, html refactoring

--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -6,16 +6,28 @@
                 <a href="#"><span class="fa fa-home mr-3"></span>Home</a>
             </li>
             <li>
-                <a href="/admin/meeting-properties"><span class="fa fa-user mr-3"></span> Properties</a>
+                <a href="/admin/meeting-properties"><span class="fa fa-cogs mr-3"></span>Properties</a>
             </li>
             <li>
-                <a href="#"><span class="fa fa-telegram mr-3"></span>Times Setter</a>
+                <a href="#"><span class="fa fa-calendar mr-3"></span>Times Setter</a>
             </li>
             <li>
-                <a href="#"><span class="fa fa-sticky-note mr-3"></span> API</a>
+                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
+                    <span class="fa fa-sticky-note mr-3"></span> API</a>
+                <ul class="list-unstyled collapse" id="pageSubmenu" style="">
+                    <li>
+                        <a href="#">Page 1</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 3</a>
+                    </li>
+                </ul>
             </li>
             <li>
-                <a href="/admin/logs"><span class="fa fa-coffee mr-3"></span> Log</a>
+                <a href="/admin/logs"><span class="fa fa-file-text-o mr-3"></span> Log</a>
             </li>
         </ul>
 
