--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -12,6 +12,7 @@
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h4>Meeting properties</h4>
                 <hr>
+                <a href="../logs/log.log">log</a>
                 <textarea class="form-control h-25" rows="15" placeholder="Please write customer notes"></textarea>
             </div>
         </div>
