--- a/src/main/resources/templates/meeting-properties.html
+++ b/src/main/resources/templates/meeting-properties.html
@@ -11,9 +11,10 @@
             </nav>
 
             <!-- Page Content  -->
-            <div id="content" class="p-4 p-md-5 pt-5">
+            <div id="content" class="pt-4 pl-5">
                 <h4>Meeting properties</h4>
                 <hr>
+                <br>
                 <form action="#">
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label" for="view">View Per Page</label>
