Update href to contextPath root

--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -6,7 +6,7 @@
                 <a href="#"><span class="fa fa-home mr-3"></span>Home</a>
             </li>
             <li>
-                <a href="/admin/meeting-properties"><span class="fa fa-cogs mr-3"></span>Properties</a>
+                <a th:href="@{/admin/meeting-properties}"><span class="fa fa-cogs mr-3"></span>Properties</a>
             </li>
             <li>
                 <a href="#"><span class="fa fa-calendar mr-3"></span>Times Setter</a>
@@ -27,7 +27,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/admin/logs"><span class="fa fa-file-text-o mr-3"></span> Log</a>
+                <a th:href="@{/admin/logs}"><span class="fa fa-file-text-o mr-3"></span> Log</a>
             </li>
         </ul>
 
