--- a/src/main/resources/templates/meeting-properties-edit.html
+++ b/src/main/resources/templates/meeting-properties-edit.html
@@ -80,7 +80,7 @@
 
                     <br>
                     <button type="submit" class="btn btn-info col-2">SAVE</button>
-                    <a href="/admin/meeting-properties" class="btn btn-secondary btn-md">Back</a>
+                    <a th:href="@{/admin/meeting-properties}" class="btn btn-secondary btn-md">Back</a>
                 </form>
             </div>
         </div>
