--- a/src/main/resources/templates/meeting-properties.html
+++ b/src/main/resources/templates/meeting-properties.html
@@ -73,7 +73,7 @@
                     </div>
                     <hr>
                     <br>
-                    <a href="/admin/meeting-properties-edit" class="btn btn-info btn-md">Edit</a>
+                    <a th:href="@{/admin/meeting-properties-edit}" class="btn btn-info btn-md">Edit</a>
 
 
                     <!-- Button trigger modal -->
@@ -97,7 +97,7 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <a href="/admin/meeting-properties-reset" class="btn btn-primary btn-md">Reset</a>
+                                    <a th:href="@{/admin/meeting-properties-reset}" class="btn btn-primary btn-md">Reset</a>
                                 </div>
                             </div>
                         </div>
