Job Properties controller

--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -12,7 +12,7 @@
                     <span class="fa fa-cogs mr-3"></span> Properties</a>
                 <ul class="list-unstyled collapse" id="pageSubmenu1" style="">
                     <li>
-                        <a th:href="@{/admin/meeting-properties}"><span class="fa fa-cogs mr-3"></span>Meeting</a>
+                        <a th:href="@{/admin/meeting-properties}"><span class="fa fa-graduation-cap mr-3"></span>Meeting</a>
                     </li>
                     <li>
                         <a th:href="@{/admin/job-properties}"><span class="fa fa-tasks mr-3"></span>Job</a>
