Job main process refactoring

--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -20,7 +20,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#"><span class="fa fa-calendar mr-3"></span>Times Setter</a>
+                <a rel="noopener noreferrer" target="_blank" href="/../time-setter"><span class="fa fa-calendar mr-3"></span>Times Setter</a>
             </li>
             <li>
                 <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
