AJAX logging url updated

--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -104,7 +104,7 @@
                             d.interval = setInterval(function () {
                                 $.ajax({
                                     // ${pageContext.request.contextPath}
-                                    url: 'razykrashka-bot-0.0.1-SNAPSHOT/admin/logs-ajax',
+                                    url: 'admin/logs-ajax',
                                     success: function (data) {
                                         $('#result').html(data);
                                     }
