Before meeting job update

--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -53,7 +53,7 @@
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script>
                 All rights reserved | <i class="icon-heart"
                                          aria-hidden="true"></i> <a
-                    href="https://t.me/razykrashkaen" target="_blank">razykrashka.com</a>
+                    href="https://t.me/RazykrashkaClub" target="_blank">razykrashka.com</a>
             </p>
         </div>
 
