Add to black list controller

--- a/src/main/resources/templates/blocks/navigation.html
+++ b/src/main/resources/templates/blocks/navigation.html
@@ -33,7 +33,7 @@
                         <a th:href="@{/admin/users/info}"><span class="fa fa-graduation-cap mr-3"></span>Info</a>
                     </li>
                     <li>
-                        <a th:href="@{/admin/users/info}"><span class="fa fa-thumbs-down mr-3"></span> Black list</a>
+                        <a th:href="@{/admin/users/black-list}"><span class="fa fa-thumbs-down mr-3"></span> Black list</a>
                     </li>
                 </ul>
             </li>
