--- a/src/main/resources/templates/logs.html
+++ b/src/main/resources/templates/logs.html
@@ -71,6 +71,11 @@
                 width: 100%;
                 height: 550px;
                 overflow-y: scroll;
+                white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
+                white-space: -pre-wrap; /* Opera */
+                white-space: -o-pre-wrap; /* Opera */
+                white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+                word-wrap: break-word; /* IE 5.5+ */
             }
 
         </style>
@@ -115,7 +120,7 @@
                 </script>
                 <hr>
                 <div id="result"></div>
-                <pre id="result-pre" th:text="${lastLog}"/>
+                <pre id="result-pre" th:text="${lastLog}" width="70%"/>
             </div>
         </div>
     </body>
